# Exclude support for registering main function in multi-process tests.
gtest_include_multiprocess = true

# Exclude support for platform-specific operations across unit tests.
gtest_include_platform_test = true

# Exclude support for testing Objective C code on OS X and iOS.
gtest_include_objc_support = true

# Exclude support for flushing coverage files on iOS.
gtest_include_ios_coverage = true