import("../base.gni")

config("exe") {
  if (is_win) {
    ldflags = [
      "/SUBSYSTEM:WINDOWS",
    ]
  }
}

base_executable("execute") {
  configs += [ ":exe" ]

  include_dirs = [ "../", ]

  sources = [ "execute.cc" ]

  deps = [ "//base" ]

  suppressed_configs = [ "//build/config/compiler:thin_archive" ]
}
