import("../base.gni")

config("example_config") {
  if (is_win) {
    ldflags = [ "/SUBSYSTEM:WINDOWS" ]
    if (is_clang) {
      cflags = [ "-Wno-undef" ]
    }
  }
}

base_executable("example") {
  configs += [ ":example_config" ]

  include_dirs = [ "../" ]

  sources = [ "example.cc" ]

  deps = [ "//base" ]

  if (is_win) {
    deps += [ "//third_party/wtl" ]
  }

  suppressed_configs = [ "//build/config/compiler:thin_archive" ]
}
